# MobiAgent

./: .gitignore  README.md  README_zh.md  requirements.txt  requirements_simple.txt
MobiFlow/: CHANGELOG.md  README.md  README_en.md  example_checker_modes.yaml  logging_config.json  pyproject.toml  test_model_connectivity.py  universal_test_runner.py
MobiFlow/auto_rules/: README.md  __init__.py  llm_generator.py  main.py  prompts.py  run_all.sh  task_extractor.py  test_output_examples.yaml
MobiFlow/avdag/: __init__.py  conditions.py  dag.py  loader.py  logger.py  ocr_processor.py  trace_loader.py  types.py  verifier.py
MobiFlow/docs/: CHECKER_MODES.md  OCR识别改进.md  UNIVERSAL_TEST_RUNNER.md  日志系统使用.md  验证框架.md
MobiFlow/task_configs/: bilibili.json  cloudmusic.json  ele.json  feizhu.json  gaode.json  taobao.json  task_config_template.json  weixin.json  xiaohongshu.json  xiaohongshu_auto.json  xiechen.json
MobiFlow/task_rules/: example_checker_modes.yaml  example_checker_ordes.yaml
MobiFlow/task_rules/bilibili/: bilibili-type1.yaml  bilibili-type2.yaml  bilibili-type3.yaml  bilibili-type4.yaml  bilibili-type5.yaml  bilibili-type6.yaml  bilibili-type7.yaml  bilibili-type8.yaml  bilibili-type9.yaml
MobiFlow/task_rules/cloudmusic/: cloudmusic-type1.yaml  cloudmusic-type2.yaml
MobiFlow/task_rules/ele/: ele-type3.yaml  ele-type4.yaml  ele-type5.yaml
MobiFlow/task_rules/feizhu/: feizhu-type1.yaml  feizhu-type2.yaml  feizhu-type3.yaml  feizhu-type4.yaml  feizhu-type5.yaml  feizhu-type6.yaml  feizhu-type7.yaml  feizhu-type8.yaml
Mobiagent/: gradle.properties  (+2 more)
(+159 files in other folders)
